Add missing solutions to chapters 16-19

--- a/bayes/Chapter 16 exercise 4.ipynb
+++ b/bayes/Chapter 16 exercise 4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,16 @@
    "metadata": {},
    "source": [
     "## 16.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = [4, 18, 6, 4, 5, 6, 4, 6, 16, 7]\n",
+    "assert len(X) == 10"
    ]
   },
   {
@@ -67,18 +77,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "s == 1 -> benign, s == 2 -> malignant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\ntransformed parameters {\\n    matrix[nStudy, 2] logp;\\n    for(i in 1:N){\\n        matrix[i, 1] = log(0.5) + binomial_lpmf(X[i] | N, theta[1]);\\n        matrix[i, 2] = log(0.5) + binomial_lpmf(X[i] | N, theta[2]);\\n    }\\n}\\n'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "transformed parameters {\n",
-    "    int N;\n",
-    "    matrix[N, 2] logp;\n",
+    "    matrix[nStudy, 2] logp;\n",
     "    for(i in 1:N){\n",
-    "        matrix[i, 1] = binomial_lpmf(X[i] | N, theta_b);\n",
-    "        matrix[i, 2] = binomial_lpmf(X[i] | N, theta_m);\n",
+    "        logp[i, 1] = log(0.5) + binomial_lpmf(X[i] | N, theta[1]);\n",
+    "        logp[i, 2] = log(0.5) + binomial_lpmf(X[i] | N, theta[2]);\n",
     "    }\n",
     "}\n",
     "'''"
@@ -88,42 +115,131 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 16.3.3 "
+    "### 16.4.3 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL anon_model_4571326d135b2d69323dc47bcc281c0e NOW.\n"
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL anon_model_50259110c51b639de2a7299ad999d3ae NOW.\n"
      ]
     }
    ],
    "source": [
-    "ocode = \"\"\"functions{\n",
-    "    real my_prob_lpdf(real Y, real b){\n",
-    "        return log(cbrt(b)/tgamma(4/3))-b*Y^3;\n",
+    "ocode = \"\"\"\n",
+    "data {\n",
+    "    int<lower=1> N;\n",
+    "    int<lower=0, upper=20> X[N];\n",
+    "\n",
+    "}\n",
+    "\n",
+    "parameters {\n",
+    "    ordered[2] alpha;\n",
+    "}\n",
+    "\n",
+    "transformed parameters {\n",
+    "    real<lower=0, upper=1> theta[2];\n",
+    "    matrix[N, 2] logp;\n",
+    "    \n",
+    "    theta[1] = inv_logit(alpha[1]);\n",
+    "    theta[2] = inv_logit(alpha[2]);\n",
+    "    \n",
+    "    for(i in 1:N){\n",
+    "        logp[i, 1] = log(0.5) + binomial_logit_lpmf(X[i] | 20, alpha[1]);\n",
+    "        logp[i, 2] = log(0.5) + binomial_logit_lpmf(X[i] | 20, alpha[2]);\n",
     "    }\n",
     "}\n",
+    "model {\n",
+    "   for(i in 1:N){\n",
+    "        target += log_sum_exp(logp[i]);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
     "\"\"\"\n",
     "sm = pystan.StanModel(model_code=ocode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {'N': len(X), 'X': X}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Inference for Stan model: anon_model_50259110c51b639de2a7299ad999d3ae.\n",
+       "4 chains, each with iter=1000; warmup=500; thin=1; \n",
+       "post-warmup draws per chain=500, total post-warmup draws=2000.\n",
+       "\n",
+       "             mean se_mean     sd   2.5%    25%    50%    75%  97.5%  n_eff   Rhat\n",
+       "alpha[1]    -1.04  4.9e-3   0.18  -1.38  -1.16  -1.03  -0.92  -0.69   1320    1.0\n",
+       "alpha[2]      1.8    0.01   0.47   0.97   1.47   1.76    2.1   2.84   1168    1.0\n",
+       "theta[1]     0.26  9.6e-4   0.03    0.2   0.24   0.26   0.28   0.34   1296    1.0\n",
+       "theta[2]     0.85  1.7e-3   0.06   0.72   0.81   0.85   0.89   0.94   1167    1.0\n",
+       "logp[1,1]   -2.48  6.9e-3   0.24  -3.11   -2.6  -2.43   -2.3  -2.22   1214    1.0\n",
+       "logp[2,1]  -20.25    0.06   2.28  -24.8 -21.75 -20.15 -18.71 -15.94   1321    1.0\n",
+       "logp[3,1]   -2.48  4.5e-3   0.16   -2.9  -2.54  -2.42  -2.37  -2.35   1256    1.0\n",
+       "logp[4,1]   -2.48  6.9e-3   0.24  -3.11   -2.6  -2.43   -2.3  -2.22   1214    1.0\n",
+       "logp[5,1]   -2.36  3.0e-3    0.1  -2.64  -2.38  -2.32   -2.3  -2.29   1052    1.0\n",
+       "logp[6,1]   -2.48  4.5e-3   0.16   -2.9  -2.54  -2.42  -2.37  -2.35   1256    1.0\n",
+       "logp[7,1]   -2.48  6.9e-3   0.24  -3.11   -2.6  -2.43   -2.3  -2.22   1214    1.0\n",
+       "logp[8,1]   -2.48  4.5e-3   0.16   -2.9  -2.54  -2.42  -2.37  -2.35   1256    1.0\n",
+       "logp[9,1]  -14.94    0.05   1.92 -18.79 -16.19 -14.84 -13.64 -11.33   1321    1.0\n",
+       "logp[10,1]  -2.83  9.0e-3   0.32  -3.59   -3.0  -2.76  -2.58   -2.4   1307    1.0\n",
+       "logp[1,2]  -24.31    0.18   6.28 -38.71  -28.1  -23.5 -19.88 -14.11   1189    1.0\n",
+       "logp[2,2]   -2.37    0.02   0.52  -3.83  -2.54  -2.18   -2.0  -1.95   1086    1.0\n",
+       "logp[3,2]  -18.63    0.15   5.34 -30.96 -21.82 -17.91 -14.86  -10.1   1190    1.0\n",
+       "logp[4,2]  -24.31    0.18   6.28 -38.71  -28.1  -23.5 -19.88 -14.11   1189    1.0\n",
+       "logp[5,2]  -21.35    0.17   5.81 -34.72 -24.83 -20.58 -17.25 -11.98   1190    1.0\n",
+       "logp[6,2]  -18.63    0.15   5.34 -30.96 -21.82 -17.91 -14.86  -10.1   1190    1.0\n",
+       "logp[7,2]  -24.31    0.18   6.28 -38.71  -28.1  -23.5 -19.88 -14.11   1189    1.0\n",
+       "logp[8,2]  -18.63    0.15   5.34 -30.96 -21.82 -17.91 -14.86  -10.1   1190    1.0\n",
+       "logp[9,2]   -2.73    0.02   0.68  -4.69  -2.93  -2.47  -2.26  -2.22   1221    1.0\n",
+       "logp[10,2] -16.14    0.14   4.86 -27.44 -19.03 -15.46  -12.7  -8.44   1191    1.0\n",
+       "lp__       -24.16    0.04   1.03 -26.91 -24.55 -23.86 -23.43 -23.15    846    1.0\n",
+       "\n",
+       "Samples were drawn using NUTS at Tue Feb  2 21:42:56 2021.\n",
+       "For each parameter, n_eff is a crude measure of effective sample size,\n",
+       "and Rhat is the potential scale reduction factor on split chains (at \n",
+       "convergence, Rhat=1)."
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fit = sm.sampling(data=data, iter=1000, chains=4, seed=1)\n",
+    "fit"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 16.3.4"
+    "### 16.4.4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -132,67 +248,118 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL anon_model_c6c57b65eca12585f05fe98c1a361537 NOW.\n"
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL anon_model_8787560796fec25e7a4422be212dbc6b NOW.\n"
      ]
     }
    ],
    "source": [
     "ocode = \"\"\"\n",
-    "functions{\n",
-    "    real my_prob_lpdf(real Y, real b){\n",
-    "        return log(cbrt(b)/tgamma(4/3))-b*Y^3;\n",
-    "    }\n",
-    "}\n",
-    "\n",
     "data {\n",
-    "    int N;\n",
-    "    real Y[N];\n",
+    "    int<lower=1> N;\n",
+    "    int<lower=0, upper=20> X[N];\n",
+    "\n",
     "}\n",
     "\n",
     "parameters {\n",
-    "    real<lower=0> b;\n",
+    "    ordered[2] alpha;\n",
     "}\n",
     "\n",
-    "model {\n",
-    "    for(i in 1:N)\n",
-    "        Y[i] ~ my_prob(b);\n",
+    "transformed parameters {\n",
+    "    real<lower=0, upper=1> theta[2];\n",
+    "    matrix[N, 2] logp;\n",
+    "    \n",
+    "    theta[1] = inv_logit(alpha[1]);\n",
+    "    theta[2] = inv_logit(alpha[2]);\n",
+    "    \n",
+    "    for(i in 1:N){\n",
+    "        logp[i, 1] = log(0.5) + binomial_logit_lpmf(X[i] | 20, alpha[1]);\n",
+    "        logp[i, 2] = log(0.5) + binomial_logit_lpmf(X[i] | 20, alpha[2]);\n",
+    "    }\n",
     "}\n",
+    "model {\n",
+    "   for(i in 1:N){\n",
+    "        target += log_sum_exp(logp[i]);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "generated quantities {\n",
+    "    real pState[N];\n",
+    "    for(i in 1:N){\n",
+    "        pState[i] = exp(logp[i,1]) / (exp(logp[i,1]) + exp(logp[i,2]));\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
     "\"\"\"\n",
     "sm = pystan.StanModel(model_code=ocode)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {'N': df.shape[0], 'Y': df.x}"
+    "data = {'N': len(X), 'X': X}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Inference for Stan model: anon_model_c6c57b65eca12585f05fe98c1a361537.\n",
+       "Inference for Stan model: anon_model_8787560796fec25e7a4422be212dbc6b.\n",
        "4 chains, each with iter=1000; warmup=500; thin=1; \n",
        "post-warmup draws per chain=500, total post-warmup draws=2000.\n",
        "\n",
-       "       mean se_mean     sd   2.5%    25%    50%    75%  97.5%  n_eff   Rhat\n",
-       "b      2.42  5.3e-3   0.14   2.15   2.33   2.42   2.51   2.69    668    1.0\n",
-       "lp__ -38.54    0.02   0.74 -40.72 -38.75 -38.23 -38.05  -38.0    920    1.0\n",
+       "             mean se_mean     sd    2.5%    25%    50%    75%  97.5%  n_eff   Rhat\n",
+       "alpha[1]    -1.04  4.9e-3   0.18   -1.38  -1.16  -1.03  -0.92  -0.69   1320    1.0\n",
+       "alpha[2]      1.8    0.01   0.47    0.97   1.47   1.76    2.1   2.84   1168    1.0\n",
+       "theta[1]     0.26  9.6e-4   0.03     0.2   0.24   0.26   0.28   0.34   1296    1.0\n",
+       "theta[2]     0.85  1.7e-3   0.06    0.72   0.81   0.85   0.89   0.94   1167    1.0\n",
+       "logp[1,1]   -2.48  6.9e-3   0.24   -3.11   -2.6  -2.43   -2.3  -2.22   1214    1.0\n",
+       "logp[2,1]  -20.25    0.06   2.28   -24.8 -21.75 -20.15 -18.71 -15.94   1321    1.0\n",
+       "logp[3,1]   -2.48  4.5e-3   0.16    -2.9  -2.54  -2.42  -2.37  -2.35   1256    1.0\n",
+       "logp[4,1]   -2.48  6.9e-3   0.24   -3.11   -2.6  -2.43   -2.3  -2.22   1214    1.0\n",
+       "logp[5,1]   -2.36  3.0e-3    0.1   -2.64  -2.38  -2.32   -2.3  -2.29   1052    1.0\n",
+       "logp[6,1]   -2.48  4.5e-3   0.16    -2.9  -2.54  -2.42  -2.37  -2.35   1256    1.0\n",
+       "logp[7,1]   -2.48  6.9e-3   0.24   -3.11   -2.6  -2.43   -2.3  -2.22   1214    1.0\n",
+       "logp[8,1]   -2.48  4.5e-3   0.16    -2.9  -2.54  -2.42  -2.37  -2.35   1256    1.0\n",
+       "logp[9,1]  -14.94    0.05   1.92  -18.79 -16.19 -14.84 -13.64 -11.33   1321    1.0\n",
+       "logp[10,1]  -2.83  9.0e-3   0.32   -3.59   -3.0  -2.76  -2.58   -2.4   1307    1.0\n",
+       "logp[1,2]  -24.31    0.18   6.28  -38.71  -28.1  -23.5 -19.88 -14.11   1189    1.0\n",
+       "logp[2,2]   -2.37    0.02   0.52   -3.83  -2.54  -2.18   -2.0  -1.95   1086    1.0\n",
+       "logp[3,2]  -18.63    0.15   5.34  -30.96 -21.82 -17.91 -14.86  -10.1   1190    1.0\n",
+       "logp[4,2]  -24.31    0.18   6.28  -38.71  -28.1  -23.5 -19.88 -14.11   1189    1.0\n",
+       "logp[5,2]  -21.35    0.17   5.81  -34.72 -24.83 -20.58 -17.25 -11.98   1190    1.0\n",
+       "logp[6,2]  -18.63    0.15   5.34  -30.96 -21.82 -17.91 -14.86  -10.1   1190    1.0\n",
+       "logp[7,2]  -24.31    0.18   6.28  -38.71  -28.1  -23.5 -19.88 -14.11   1189    1.0\n",
+       "logp[8,2]  -18.63    0.15   5.34  -30.96 -21.82 -17.91 -14.86  -10.1   1190    1.0\n",
+       "logp[9,2]   -2.73    0.02   0.68   -4.69  -2.93  -2.47  -2.26  -2.22   1221    1.0\n",
+       "logp[10,2] -16.14    0.14   4.86  -27.44 -19.03 -15.46  -12.7  -8.44   1191    1.0\n",
+       "pState[1]     1.0  5.9e-7 2.5e-5     1.0    1.0    1.0    1.0    1.0   1790    1.0\n",
+       "pState[2]  2.3e-7  5.1e-8 1.9e-6 1.8e-10 3.7e-9 2.0e-8 8.2e-8 1.1e-6   1355    1.0\n",
+       "pState[3]     1.0  1.2e-5 4.4e-4     1.0    1.0    1.0    1.0    1.0   1336    1.0\n",
+       "pState[4]     1.0  5.9e-7 2.5e-5     1.0    1.0    1.0    1.0    1.0   1790    1.0\n",
+       "pState[5]     1.0  2.4e-6 9.6e-5     1.0    1.0    1.0    1.0    1.0   1567    1.0\n",
+       "pState[6]     1.0  1.2e-5 4.4e-4     1.0    1.0    1.0    1.0    1.0   1336    1.0\n",
+       "pState[7]     1.0  5.9e-7 2.5e-5     1.0    1.0    1.0    1.0    1.0   1790    1.0\n",
+       "pState[8]     1.0  1.2e-5 4.4e-4     1.0    1.0    1.0    1.0    1.0   1336    1.0\n",
+       "pState[9]  3.9e-5  5.3e-6 2.3e-4  8.8e-8 1.3e-6 5.2e-6 1.9e-5 2.6e-4   1944    1.0\n",
+       "pState[10]    1.0  7.3e-5 2.6e-3     1.0    1.0    1.0    1.0    1.0   1241    1.0\n",
+       "lp__       -24.16    0.04   1.03  -26.91 -24.55 -23.86 -23.43 -23.15    846    1.0\n",
        "\n",
-       "Samples were drawn using NUTS at Mon Dec 21 01:15:23 2020.\n",
+       "Samples were drawn using NUTS at Tue Feb  2 21:44:09 2021.\n",
        "For each parameter, n_eff is a crude measure of effective sample size,\n",
        "and Rhat is the potential scale reduction factor on split chains (at \n",
        "convergence, Rhat=1)."
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,6 +367,33 @@
    "source": [
     "fit = sm.sampling(data=data, iter=1000, chains=4, seed=1)\n",
     "fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 18, 6, 4, 5, 6, 4, 6, 16, 7]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 16.4.5 - 16.4.8 todo"
    ]
   }
  ],
